@@ -1,23 +1,23 @@
 /**
  * BSD 3-Clause License
- *
+ * <p>
  * Copyright © 2019, viadee Unternehmensberatung AG
  * All rights reserved.
- *
+ * <p>
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are met:
- *
+ * <p>
  * * Redistributions of source code must retain the above copyright notice, this
- *   list of conditions and the following disclaimer.
- *
+ * list of conditions and the following disclaimer.
+ * <p>
  * * Redistributions in binary form must reproduce the above copyright notice,
- *   this list of conditions and the following disclaimer in the documentation
- *   and/or other materials provided with the distribution.
- *
+ * this list of conditions and the following disclaimer in the documentation
+ * and/or other materials provided with the distribution.
+ * <p>
  * * Neither the name of the copyright holder nor the names of its
- *   contributors may be used to endorse or promote products derived from
- *   this software without specific prior written permission.
- *
+ * contributors may be used to endorse or promote products derived from
+ * this software without specific prior written permission.
+ * <p>
  * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
  * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
  * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
@@ -32,110 +32,95 @@
 package de.viadee.bpm.vPAV.processing.checker;
 
 import de.viadee.bpm.vPAV.BpmnScanner;
+import de.viadee.bpm.vPAV.IssueService;
 import de.viadee.bpm.vPAV.RuntimeConfig;
 import de.viadee.bpm.vPAV.config.model.Rule;
 import de.viadee.bpm.vPAV.processing.code.flow.BpmnElement;
 import de.viadee.bpm.vPAV.processing.code.flow.ControlFlowGraph;
 import de.viadee.bpm.vPAV.processing.code.flow.FlowAnalysis;
-import de.viadee.bpm.vPAV.processing.model.data.CheckerIssue;
 import org.camunda.bpm.model.bpmn.Bpmn;
 import org.camunda.bpm.model.bpmn.BpmnModelInstance;
 import org.camunda.bpm.model.bpmn.instance.BaseElement;
+import org.junit.After;
 import org.junit.Assert;
 import org.junit.BeforeClass;
 import org.junit.Test;
-import org.xml.sax.SAXException;
 
-import javax.xml.parsers.ParserConfigurationException;
-import javax.xml.xpath.XPathExpressionException;
 import java.io.File;
-import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.ArrayList;
 import java.util.Collection;
 
 public class OverlapCheckerTest {
 
-	private static final String BASE_PATH = "src/test/resources/";
+    private static final String BASE_PATH = "src/test/resources/";
 
-	private static OverlapChecker checker;
+    private static OverlapChecker checker;
 
-	private static ClassLoader cl;
+    private static ClassLoader cl;
 
-	private final Rule rule = new Rule("OverlapChecker", true, null, null, null, null);
+    private final Rule rule = new Rule("OverlapChecker", true, null, null, null, null);
 
-	@BeforeClass
-	public static void setup() throws MalformedURLException {
-		final File file = new File(".");
-		final String currentPath = file.toURI().toURL().toString();
-		final URL classUrl = new URL(currentPath + "src/test/java");
-		final URL[] classUrls = { classUrl };
-		cl = new URLClassLoader(classUrls);
-		RuntimeConfig.getInstance().setClassLoader(cl);
-		RuntimeConfig.getInstance().getResource("en_US");
-	}
+    @BeforeClass
+    public static void setup() throws MalformedURLException {
+        final File file = new File(".");
+        final String currentPath = file.toURI().toURL().toString();
+        final URL classUrl = new URL(currentPath + "src/test/java");
+        final URL[] classUrls = { classUrl };
+        cl = new URLClassLoader(classUrls);
+        RuntimeConfig.getInstance().setClassLoader(cl);
+        RuntimeConfig.getInstance().getResource("en_US");
+    }
 
-	/**
-	 * Case: Correct model
-	 *
-	 * @throws IOException
-	 * @throws SAXException
-	 * @throws ParserConfigurationException
-	 * @throws XPathExpressionException
-	 */
-	@Test
-	public void testModelWithNoOverlap()
-			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-		final String PATH = BASE_PATH + "OverlapChecker_Correct.bpmn";
-		checker = new OverlapChecker(rule, new BpmnScanner(PATH));
+    /**
+     * Case: Correct model
+     */
+    @Test
+    public void testModelWithNoOverlap() {
+        final String PATH = BASE_PATH + "OverlapChecker_Correct.bpmn";
+        checker = new OverlapChecker(rule, new BpmnScanner(PATH));
 
-		final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+        // parse bpmn model
+        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-		// parse bpmn model
-		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+        for (BaseElement event : baseElements) {
+            final BpmnElement element = new BpmnElement(PATH, event, new ControlFlowGraph(), new FlowAnalysis());
+            checker.check(element);
+        }
 
-		for (BaseElement event : baseElements) {
-			final BpmnElement element = new BpmnElement(PATH, event, new ControlFlowGraph(), new FlowAnalysis());
-			issues.addAll(checker.check(element));
-		}
+        if (IssueService.getInstance().getIssues().size() > 0) {
+            Assert.fail("correct model generates an issue");
+        }
+    }
 
-		if (issues.size() > 0) {
-			Assert.fail("correct model generates an issue");
-		}
-	}
+    /**
+     * Case: Incorrect model with overlapping sequence flows
+     */
+    @Test
+    public void testModelWithOverlap() {
+        final String PATH = BASE_PATH + "OverlapChecker_Wrong.bpmn";
+        checker = new OverlapChecker(rule, new BpmnScanner(PATH));
 
-	/**
-	 * Case: Incorrect model with overlapping sequence flows
-	 *
-	 * @throws IOException
-	 * @throws SAXException
-	 * @throws ParserConfigurationException
-	 * @throws XPathExpressionException
-	 */
-	@Test
-	public void testModelWithOverlap()
-			throws XPathExpressionException, ParserConfigurationException, SAXException, IOException {
-		final String PATH = BASE_PATH + "OverlapChecker_Wrong.bpmn";
-		checker = new OverlapChecker(rule, new BpmnScanner(PATH));
+        // parse bpmn model
+        final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
 
-		final Collection<CheckerIssue> issues = new ArrayList<CheckerIssue>();
+        final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
 
-		// parse bpmn model
-		final BpmnModelInstance modelInstance = Bpmn.readModelFromFile(new File(PATH));
+        for (BaseElement event : baseElements) {
+            final BpmnElement element = new BpmnElement(PATH, event, new ControlFlowGraph(), new FlowAnalysis());
+            checker.check(element);
+        }
 
-		final Collection<BaseElement> baseElements = modelInstance.getModelElementsByType(BaseElement.class);
+        if (IssueService.getInstance().getIssues().size() != 1) {
+            Assert.fail("Incorrect model should generate an issue");
+        }
+    }
 
-		for (BaseElement event : baseElements) {
-			final BpmnElement element = new BpmnElement(PATH, event, new ControlFlowGraph(), new FlowAnalysis());
-			issues.addAll(checker.check(element));
-		}
-
-		if (issues.size() != 1) {
-			Assert.fail("Incorrect model should generate an issue");
-		}
-	}
+    @After
+    public void clearIssues() {
+        IssueService.getInstance().clear();
+    }
 }
